# mlt

./: .gitignore  CMakeLists.txt
androidlib/include/libavutil/: ffversion.h
script/: build.sh
src/: CMakeLists.txt
src/1mytest/: CMakeLists.txt  test.c
src/android/: CMakeLists.txt  mlt_android_register.c  mlt_mobile_register.c  mlt_mobile_register.h
src/framework/: CMakeLists.txt  mlt_consumer.c  mlt_factory.c  mlt_repository.c
src/melt/: CMakeLists.txt  melt.c
src/modules/avformat/: CMakeLists.txt  factory.c
src/modules/core/: CMakeLists.txt  factory.c
